# ClassicOS

./: .clang-format  .clang-tidy  .clang_complete  .clangd  .editorconfig  .gdbinit  .gitignore  .lldbinit  ABOUT.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ask.txt  boot.asm  boot1.asm  boot3.asm  boot4.asm  build.sh  configure  debug.gdb  do.sh  gdb.txt  kernel  kernel.c  linker.ld  make.config  pic.c  pmm.c  version-check.sh  x86-baremetal-toolchain.cmake
,vscode/: c_cpp_properties.json  extensions.json  settings.json  tasks.json
.github/: bug_report.yml  config.yml  feature_request.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bootloader/: Makefile  README.md  boot.asm  boot1.asm  linker.ld  stage1.asm  stage2.asm  stage2.ld  stage2_load.c
disk/: Makefile
kernel/: acpi.c  acpi.h  ata.c  ata.h  cmos.c  cmos.h  context_switch.asm  context_switch.s  cpu.c  cpu.h  debug.c  debug.h  display.c  display.h  elf.c  elf.h  fat12.c  fat12.h  fat16.c  fat16.h  floppy.c  floppy.h  framebuffer.c  framebuffer.h  fs.c  fs.h  gdt.asm  gdt.c  gdt.h  gui.c  gui.h  heap.c  heap.h  hid.c  hid.h  idt.c  idt.h  io.h  irq.c  irq.h  (+57 more)
klibc/include/: stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
klibc/src/: string.c
kstdc/include/: stdbool.h  stddef.h  stdint.h
src/: Array.h  Color3.cpp  Color3.h  Color4.cpp  Color4.h  EHS.h  HRNG.h  HRNG_GCC.s  HRNG_MSVC.s  Link.h  LinkedList.h  Mat2.h  Mat3.h  Mat4.h  Math.cpp  Math.h  Math_GCC_AMD64.s  Math_MSVC_AMD64.s  PRNG.h  Quat.h  Range.cpp  Range.h  Rect.h  SArray.h  Serializer.h  Str.h  Util.cpp  Util.h  Vec2.h  Vec3.h  Vec4.h  Vector.h  Version.cpp  Version.h  elf.c
src/boot/: boot.asm  boot2.asm  kernel_loader.asm  linker.ld
src/boot/grub/: grub.cfg  menu.lst
src/cpu/: cpu  cpu.c  cpu.h  cpuid.S  cpuid.asm  cpuid.c  cpuid.h
src/drivers/audio/: audio.c  audio.h
src/drivers/bus/: eisa.c  eisa.h  isa.c  isa.h  mca.c  mca.h  pci.c  pci.h  vesa.c  vesa.h
src/drivers/display/: display.c  display.h  vga.c  vga.h
src/drivers/io/: io.asm  io.c  io.h  serial.c  serial.h
src/drivers/keyboard/: keyboard.c  keyboard.h
src/drivers/mouse/: mouse.c  mouse.h  ps2.h  usb.h
src/drivers/network/: ne2000.c  ne2000.h
src/drivers/screen/: screen.c  screen.h
src/drivers/tty/: tty.c  tty.h
src/filesystem/fat16/: fat16.c  fat16.h  fat16_io.c  fat16_io.h
src/filesystem/fat32/: fat32.c
src/gui/: README.md  custom_vga.asm  gui.c  gui.h  main.c
src/kernel/: acpi.c  acpi.h  ahci.c  ahci.h  kernel.c  kernel.h  linker.ld  print.c  stack.c  stack.h  timer.c  timer.h
src/kernel/arch/x86/: gdt.asm  gdt.c  gdt.h  idt.asm  idt.c  idt.h  interrupt_utils.h  isr.c  isr.h
src/kernel/arch/x86/disk/: ata.h
src/kernel/arch/x86/include/: memory.h  types.c  types.h
src/kernel/arch/x86/isr/: exceptions.c  exceptions.h  isr.asm  isr.c  isr.h
src/kernel/arch/x86/memory/: memory.c
src/kernel/malloc/: kmalloc.c  kmalloc.h  malloc.c  malloc.h
src/kernel/src/: types.c
src/shell/: shell.c  shell.h
src/sys/: CPU.cpp  CPU.h  CPU_GCC_AMD64.asm  CPU_MSVC_AMD64.asm
